绘画：增加买入卖出信号点描画 数据： 从csv迁移到sqllite中 接口：预留了sqllite的交易记录接口

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ web_test.pid
 *.pyc
 __pycache__/live_data_fetch.cpython-311.pyc
 __pycache__/rt_ma_strategy.cpython-311.pyc
+__pycache__/lb_para_handler.cpython-311.pyc
+__pycache__/lb_para_handler.cpython-311.pyc
+__pycache__/live_data_fetch.cpython-311.pyc
+data/ma_strategy.db
